# tinygraph

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.cpp  tinygraph.h
data/: edge.cpp  graph.cpp  graph.h  type.cpp  type.h  types.h  vertex.cpp
functions/: connections.cpp  connections.h  util.cpp  util.h
generators/: data.cpp  data.h
type/: type_store.cpp  type_store.h
